added spring market lib and added controlers to the EveProxy